# astroboard

./: Dockerfile  README.md  dev.sh  docker-compose.yml  launch.sh  package-lock.json  package.json
backend/: Cargo.toml
backend/src/: main.rs  websocket.rs
frontend/: package-lock.json  package.json
frontend/src/components/: Button.astro  LogStreamer.astro
frontend/src/pages/: index.astro
frontend/src/scripts/: websocket.js
