[package]
name = "astroboard"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix = "0.13.1"
actix-files = "0.6.2"
actix-web = "4"
actix-web-actors = "4.2.0"
log = "0.4.20"

[dev-dependencies]
cargo-watch = "8.4.1"